# beats_trainer

./: .copier-answers.yml  .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  checkpoints.dvc  pyproject.toml
.dvc/: config
BEATs_explained/: tensor_shapes_and_dimension_flow.md
docs/: DVC_HUGGINGFACE_SETUP.md  feature_extraction.md  installation.md  training.md
example_scripts/: checkpoint_examples.py  feature_extraction_examples.py
examples/: pre_split_datasets.py
notebooks/: Advanced_ESC50_Fine_Tuning.ipynb  Advanced_Feature_Extraction_Analysis.ipynb  BEATs_Feature_Extraction_Comparison.ipynb  Quick_Start_Feature_Extraction.ipynb  Quick_Start_Training.ipynb  README.md
scripts/: esc50_download_and_train.py  setup_dvc.sh  train_from_scratch_example.py  training_approaches_comparison.py  upload_checkpoints_hf.py  upload_readme_hf.py  upload_to_hf.py
src/BEATs/: BEATs.py  __init__.py  backbone.py  modules.py  quantizer.py
src/beats_trainer/: __init__.py  checkpoint_utils.py  config.py  data_module.py  datasets.py  feature_extractor.py  model.py  trainer.py
src/beats_trainer/core/: __init__.py  feature_extractor.py  model.py
src/beats_trainer/data/: __init__.py  datasets.py  module.py
src/beats_trainer/training/: __init__.py  callbacks.py  factory.py  trainer.py  utils.py
src/beats_trainer/utils/: __init__.py
test/: README.md  __init__.py  check_config.py  conftest.py  requirements-test.txt  run_tests.py  test_beats_model.py  test_checkpoint_utils.py  test_cli_and_tools.py  test_conv2d_truncation.py  test_deterministic_fix.py  test_divisibility.py  test_feature_extractor.py  test_installation.py  test_integration.py  test_openbeats_loading.py  test_train_from_scratch.py
